[IMP] auth: added authSlice
[IMP] theme: added odoo like theme colors

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.2.0",
     "react-redux": "^8.0.5",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-native-web": "~0.18.9",
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
