--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo-google-fonts/work-sans": "^0.2.2",
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
@@ -29,6 +31,7 @@
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
     "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-hook-form": "^7.41.0",
     "react-native": "0.70.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -36,13 +39,15 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.2.0",
-    "react-redux": "^8.0.5",
-    "yup": "^0.32.11",
     "react-native-web": "~0.18.9",
-    "react-dom": "18.1.0"
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.31.0",
+    "eslint-plugin-react": "^7.31.11"
   },
   "private": true
 }
