--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-updates": "~0.15.6",
+    "expo-crypto": "~12.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
