--- a/package.json
+++ b/package.json
@@ -14,37 +14,35 @@
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo-google-fonts/work-sans": "^0.2.2",
     "@expo/webpack-config": "^0.17.2",
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
-    "@reduxjs/toolkit": "^1.9.1",
-    "@ui-kitten/components": "^5.1.2",
-    "@ui-kitten/eva-icons": "^5.1.2",
-    "@ui-kitten/moment": "^5.1.2",
-    "expo": "~47.0.9",
-    "expo-font": "~11.0.1",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-local-authentication": "~13.0.2",
-    "expo-secure-store": "~12.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
+    "@types/react-native": "~0.70.6",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
+    "expo": "^54.0.30",
+    "expo-crypto": "~15.0.8",
+    "expo-font": "~14.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-local-authentication": "~17.0.8",
+    "expo-secure-store": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.15",
     "moment": "^2.29.4",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.41.0",
-    "react-native": "0.70.5",
+    "react-native": "0.81.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.2.0",
-    "react-native-web": "~0.18.9",
-    "react-redux": "^8.0.5",
-    "redux-persist": "^6.0.0",
-    "yup": "^0.32.11",
-    "expo-updates": "~0.15.6",
-    "expo-crypto": "~12.0.0"
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "typescript": "~5.9.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
