upgrade to Expo 54
Removed UI-Kitten, and replacing it with Paper

--- a/app.json
+++ b/app.json
@@ -28,14 +28,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png",
-      "build": {
-        "babel": {
-          "include": [
-            "@ui-kitten/components"
-          ]
-        }
-      }
+      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
