--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-REACT_APP_ODOO_URL=http://192.168.1.101:8016
-REACT_APP_ODOO_DB=v16general
-EXPO_PUBLIC_API_URL=https://staging.example.com
+EXPO_PUBLIC_ODOO_URL=https://odoo.my-company.com
+EXPO_PUBLIC_ODOO_DB=prod
