--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "react-native": "0.83.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "typescript": "~5.9.3",
