--- a/package.json
+++ b/package.json
@@ -10,46 +10,41 @@
     "lint": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
-    "@eva-design/eva": "^2.1.1",
-    "@expo-google-fonts/roboto": "^0.2.2",
-    "@expo-google-fonts/work-sans": "^0.2.2",
-    "@expo/webpack-config": "^0.17.2",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/bottom-tabs": "^6.5.2",
-    "@react-navigation/native": "^6.1.1",
-    "@react-navigation/stack": "^6.3.10",
-    "@reduxjs/toolkit": "^1.9.1",
-    "@ui-kitten/components": "^5.1.2",
-    "@ui-kitten/eva-icons": "^5.1.2",
-    "@ui-kitten/moment": "^5.1.2",
-    "expo": "~47.0.9",
-    "expo-font": "~11.0.1",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-local-authentication": "~13.0.2",
-    "expo-secure-store": "~12.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "moment": "^2.29.4",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-hook-form": "^7.41.0",
-    "react-native": "0.70.5",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.9.0",
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/stack": "^7.6.13",
+    "@reduxjs/toolkit": "^2.11.2",
+    "@types/react-native": "~0.73.0",
+    "expo": "^54.0.30",
+    "expo-application": "^7.0.8",
+    "expo-local-authentication": "~17.0.8",
+    "expo-secure-store": "^15.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.15",
+    "moment": "^2.30.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-hook-form": "^7.69.0",
+    "react-native": "0.83.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-svg": "^13.2.0",
-    "react-native-web": "~0.18.9",
-    "react-redux": "^8.0.5",
+    "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "yup": "^0.32.11",
-    "expo-updates": "~0.15.6",
-    "expo-crypto": "~12.0.0"
+    "typescript": "~5.9.3",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "eslint": "^8.31.0",
-    "eslint-plugin-react": "^7.31.11"
+    "@babel/core": "^7.28.5",
+    "@types/react": "~19.1.10",
+    "eslint": "^9.39.2",
+    "eslint-plugin-react": "^7.37.5"
   },
   "private": true
 }
