--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.83.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.14.5",
+    "react-native-paper-dropdown": "^2.3.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
