--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint --fix --ext .js,.jsx ."
+    "lint": "eslint --fix --ext .js,.jsx .",
+    "postinstall": "node scripts/patch-cardcover-expo-image.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
