--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "odoo-client",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -21,11 +21,8 @@
     "expo": "^54.0.30",
     "expo-application": "^7.0.8",
     "expo-clipboard": "~8.0.8",
-    "expo-constants": "~18.0.13",
     "expo-image": "~3.0.11",
-    "expo-linking": "~8.0.11",
     "expo-local-authentication": "~17.0.8",
-    "expo-router": "~6.0.23",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
